--- a/src/Lily/BackOfficeBundle/Resources/views/Config/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Config/index.html.twig
@@ -13,17 +13,20 @@
 
 {% block body %}
 
-<section class="hbox stretch">
+	<section>
+  	<section class="hbox stretch">
 
-	{% include "LilyBackOfficeBundle::menu.html.twig" %}
+    {% include "LilyBackOfficeBundle::menu.html.twig" %}
 
-{% block content %} 	 	
-  <!-- .vbox -->      
-  <section id="wrapper">     
+    {% block content %} 	 	
+      <!-- .vbox -->      
+      <section class="js-app">     
+      
+      </section>    
+      <!-- /.vbox -->
+    {% endblock %} 
   
-  </section>    
-  <!-- /.vbox -->
-  {% endblock %} 	
+  	</section>	
   
   {% block templates %} 		
 	<!-- L'appel des différents scripts de vue -->
@@ -53,8 +56,8 @@
 	    </script>
     {% endautoescape %}
 	{% endblock %}
-
-</section>
+	
+	</section>
 
 <script src="{{ asset('js/bower_components/requirejs/require.js')}}" 
   data-main="{{ asset('js/backoffice/config/main.js')}}">
