--- a/src/Lily/BackOfficeBundle/Resources/views/Config/skeleton.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Config/skeleton.html.twig
@@ -1,4 +1,4 @@
-  <header class="header bg-dark bg-gradient">
+  <header class="header bg-light lter">
     <a id="save" href="#" class="btn btn-success pull-right">Sauvegarder</a>
     <ul class="nav nav-tabs">
       <li class="active"><a href="#global" data-toggle="tab">Globaux</a></li>
@@ -13,8 +13,8 @@
     </ul>
   </header>
   
-  <section class="scrollable wrapper">
-    <div class="tab-content">
+  <section class="tab-content-wrapper bg-light scrollable">
+    <div class="tab-content wrapper-lg">
 	   <!-- There goes the views --> 
 	</div>
   </section> 
