--- a/src/Lily/BackOfficeBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Dashboard/index.html.twig
@@ -14,33 +14,35 @@
 
 {% block body %}
 
-<section class="hbox stretch">
-
-	{% include "LilyBackOfficeBundle::menu.html.twig" with {'user': 'user'}  %}
-
 	{% block content %}
 
 	<section>
-	  <section class="vbox">
-  	  <header class="blue-header header"><p>Dashboard</p></header>
-	    <section class="scrollable">
-		    <div class="wrapper row">
-		    
-		      <!-- usage graph, chat graph -->
-		      <div class="col-md-6">
-  		      <section class="chat-graph-wrapper panel"></section>
-  		      <section class="usage-graph-wrapper panel"></section>
-		      </div>
-          
-          <!-- Front & activities -->
-		      <div class="col-md-6">
-  		      <section class="iframe-wrapper panel"></section>
-		        <section class="logs-wrapper panel"></section>
-		      </div>
-		      
-        </div>
-	    </section>
-	  </section>
+  	<section class="hbox stretch">
+    	
+    	{% include "LilyBackOfficeBundle::menu.html.twig" %}
+    	
+    	<section>
+      	<section class="vbox">
+    	    <section class="scrollable bg-light">
+    		    <div class="wrapper-lg row">
+    		    
+    		      <!-- usage graph, chat graph -->
+    		      <div class="col-md-6">
+      		      <section class="chat-graph-wrapper panel"></section>
+      		      <section class="usage-graph-wrapper panel"></section>
+    		      </div>
+              
+              <!-- Front & activities -->
+    		      <div class="col-md-6">
+      		      <section class="iframe-wrapper panel"></section>
+    		        <section class="logs-wrapper panel"></section>
+    		      </div>
+    		      
+            </div>
+          </section>
+    	  </section>
+    	</section>
+  	</section>
 	</section>
 
 	{% endblock %}
@@ -79,8 +81,6 @@
 	    </script>
     {% endautoescape %}
 	{% endblock %}
-
-</section>
 
 <script src="{{ asset('js/bower_components/requirejs/require.js')}}" 
   data-main="{{ asset('js/backoffice/dashboard/main.js')}}">
