--- a/src/Lily/ChatBundle/Resources/views/Operator/index.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/index.html.twig
@@ -14,7 +14,8 @@
 
 {% block body %}
 
-<section class="hbox stretch">
+<section>
+  <section class="hbox stretch">
 
   {% include "LilyBackOfficeBundle::menu.html.twig" with {'user': 'user'}  %}
 
@@ -116,7 +117,8 @@
 	    </script>
     {% endautoescape %}
 	{% endblock %}
-
+	
+  </section>
 </section>
 
 <script
