--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/skeleton.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/skeleton.html.twig
@@ -1,4 +1,4 @@
-<header class="header bg-dark bg-gradient">
+<header class="header menu-header bg-light lter">
   <ul class="nav nav-tabs nav-tabs-wrapper">
     <li class="usage-nav"><a href="#usage">Utilisation</a></li>
     {% if (app.user.client.config.avi) %}
@@ -11,14 +11,14 @@
   </ul>
 </header>
 <section class="tab-content-wrapper scrollable">
-  <div class="hbox stretch tab-content">
+  <div class="hbox stretch tab-content wrapper-lg bg-light">
     <div class="tab-pane row wrapper usage-wrapper">
     <!-- Usage -->
     </div>
     <div class="tab-pane row wrapper avi-wrapper">
     <!-- Avi -->
     </div>
-    <div class="tab-pane row wrapper chat-wrapper">
+    <div class="tab-pane row wrappe chat-wrapper">
     <!-- Chat -->
     </div>
     <aside class="tab-pane users-wrapper">
