--- a/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
@@ -13,7 +13,8 @@
 
 {% block body %}
 
-<section class="hbox stretch">
+<section>
+  <section class="hbox stretch">
 
   {% include "LilyBackOfficeBundle::menu.html.twig" with {'user': 'user'}  %}
 
@@ -55,6 +56,7 @@
     {% endautoescape %}
   {% endblock %}
 
+  </section>
 </section>
 
 <script src="{{ asset('js/bower_components/requirejs/require.js')}}"
