--- a/src/Lily/BackOfficeBundle/Resources/views/Config/chat.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Config/chat.html.twig
@@ -13,7 +13,7 @@
 	<input name="max" type="text" class="form-control chatMax" value="<%= chat.max %>">
 	<p class="administration-p">par opérateur disponible</p>
 	
-    <h5>File d'attente</h5>
+    <h5 class="m-t-lg">File d'attente</h5>
 	<div class="row">
       <label class="switch">
         <input name="queue" type="checkbox" <% if (chat.queue) { %> checked <% } %> >
@@ -27,7 +27,7 @@
       <p class="administration-p">places par conseiller en production</p>
 	</div>
 	
-	<h5>Ecran d'accueil</h5>
+	<h5 class="m-t-lg">Ecran d'accueil</h5>
 	<div class="row">
       <label class="switch">
         <input name="contactForm" type="checkbox" <% if (chat.contactForm) { %> checked <% } %> >
