--- a/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
@@ -8,13 +8,16 @@
 
 {% block stylesheets %}
 
-{% stylesheets 'css/vendor/bootstrap.css'
-               'css/vendor/animate.css'
-               'css/vendor/font-awesome.min.css'
-               'css/vendor/font.css'
-               'css/vendor/plugin.css'
-               'css/vendor/app.css'
-               'css/backoffice/main.css'
+{% stylesheets 
+
+  'css/vendor/bootstrap.css'
+  'css/vendor/animate.css'
+  'css/vendor/font-awesome.min.css'
+  'css/vendor/font.css'
+  'css/vendor/plugin.css'
+  'css/vendor/app.css'
+  'css/backoffice/main.css'
+  
 filter='cssrewrite' %}
 
   <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
@@ -34,7 +37,13 @@ filter='cssrewrite' %}
 </head>
 <body>
 
-{% block body %}{% endblock %}
+  <section class="vbox">
+    
+    {% include "LilyBackOfficeBundle::header.html.twig" %}
+
+    {% block body %}{% endblock %}
+
+  </section>
 
 </body>
 </html>
