--- a/src/Lily/ChatBundle/Resources/views/Operator/skeleton.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/skeleton.html.twig
@@ -1,31 +1,10 @@
-<header class="header bg-dark bg-gradient">
-  <div class="header-control pull-right">
-    <div class="btn-group windows">
-	    <button class="btn btn-sm dropdown-toggle" data-toggle="dropdown">
-	      <span class="dropdown-label">1 conversation</span>
-      </button>
-      <ul class="dropdown-menu">
-		    <li class="active"><a href="#" data="1">1 conversation</a></li>
-        <li><a href="#" data="2">2 conversations</a></li>
-        <li><a href="#" data="4">4 conversations</a></li>
-	    </ul>
-    </div>
-    <div class="btn-group status">
-      <button class="btn btn-sm dropdown-toggle" data-toggle="dropdown">
-        <icon class="icon-stop"></icon><span class="dropdown-label"></span>		        
-      </button>
-      <ul class="dropdown-menu">
-        <li><a data="available" href="#">Disponible</a></li>
-        <li><a data="unavailable" href="#">Indisponible</a></li>
-      </ul>
-    </div>
-  </div>
+<header class="header bg-light lter">
   <ul class="nav nav-tabs">
     <li class="dashboard-nav"><a href="#dashboard">Dashboard</a></li>
-    <li class="live-nav"><a href="#live">Discussions<b class="badge bg-warning pull-right hide">0</b></a></li>
+    <li class="live-nav"><a href="#live">Discussions</a></li>
   </ul>
 </header>
-<section class="js-main-container">
+<section class="js-main-container bg-light">
   <!--
     Here Goes Live & Dashboard
   -->  	  
