--- a/src/Lily/KnowledgeBundle/Resources/views/Faq/content.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Faq/content.html.twig
@@ -1,7 +1,9 @@
 <button class="destroy close hover-action">×</button>
+<div class="faq-grabber">
+  <i class="icon-reorder"></i>
+</div>
 <div class="view" data-id="<%=id%>">
   <div class="faq-item">
-  	<i class="icon-reorder"></i>
     <span class="faq-name"><%=title %></span>
     <input class="edit form-control" type="text" value="<%=title %>">
   </div>
