--- a/src/Lily/AppBundle/Resources/views/tracker.js.twig
+++ b/src/Lily/AppBundle/Resources/views/tracker.js.twig
@@ -1,70 +1,353 @@
-function __init() {
-	
-	var saio = {};
-	
-	// Detect if is ie < 10
-	if (/MSIE (\d+\.\d+);/.test(navigator.userAgent)) { 
-		var ieversion=new Number(RegExp.$1)
-		if (ieversion<10) { return false };
-	}
-	
-	// Detect if is Mobile
-	!function(a){var b=/iPhone/i,c=/iPod/i,d=/iPad/i,e=/(?=.*\bAndroid\b)(?=.*\bMobile\b)/i,f=/Android/i,g=/IEMobile/i,h=/(?=.*\bWindows\b)(?=.*\bARM\b)/i,i=/BlackBerry/i,j=/Opera Mini/i,k=/(?=.*\bFirefox\b)(?=.*\bMobile\b)/i,l=new RegExp("(?:Nexus 7|BNTV250|Kindle Fire|Silk|GT-P1000)","i"),m=function(a,b){return a.test(b)},n=function(a){var n=a||navigator.userAgent;this.apple={phone:m(b,n),ipod:m(c,n),tablet:m(d,n),device:m(b,n)||m(c,n)||m(d,n)},this.android={phone:m(e,n),tablet:!m(e,n)&&m(f,n),device:m(e,n)||m(f,n)},this.windows={phone:m(g,n),tablet:m(h,n),device:m(g,n)||m(h,n)},this.other={blackberry:m(i,n),opera:m(j,n),firefox:m(k,n),device:m(i,n)||m(j,n)||m(k,n)},this.seven_inch=m(l,n),this.any=this.apple.device||this.android.device||this.windows.device||this.other.device||this.seven_inch,this.phone=this.apple.phone||this.android.phone||this.windows.phone,this.tablet=this.apple.tablet||this.android.tablet||this.windows.tablet},o=new n;o.Class=n,"undefined"!=typeof module&&module.exports?module.exports=o:"function"==typeof define&&define.amd&&define(o),a.mobile=o}(this);
-	
-	var head = document.getElementsByTagName('head');
-	var body = document.getElementsByTagName('body');
-	
-	// Add stylesheet
-	var s = document.createElement('link');
-	s.setAttribute('rel', 'stylesheet');
-	s.setAttribute('type', 'text/css');
-	s.setAttribute('href', 'http://cdn.saio.fr/customer/{{ licence }}/css/lily-float.css');
-	head[0].appendChild(s);
-	
-	// Add widget container	
-	var w = document.createElement('div');
-	w.setAttribute('id', 'lily-widget-container');	
-	w.innerHTML = '<h3>Vous avez une question ?</h3>';
-	body[0].appendChild(w);
-	if (mobile.phone) { w.style.opacity = 1; }
-	
-	// Add app container	
-	var c = document.createElement('div');
-	c.setAttribute('id', 'lilyAppContainer');	
-	body[0].appendChild(c);
-	
-	// Add iframe if not mobile
-	if (!mobile.phone) {
-	
-		var i = document.createElement('iframe');
-		i.setAttribute('id', 'lilyApp');
-		i.setAttribute('src', '{{ path("lily_app_index", { licence: licence }) }}');
-		i.setAttribute('frameborder', '0');
-		document.getElementById('lilyAppContainer').appendChild(i);
-		
-		i.onload = function() { 
-			
-			// Showing the widget
-			w.style.opacity = 1;
-			w.style.display = 'block';
-			
-			// Event listener 
-			if (!mobile.phone) {
-				
-				i.contentWindow.document.getElementsByClassName('lily-icon-reduce')[0].onclick = function() { c.style.opacity = 0; c.style.display = 'none'; w.style.opacity = 1; }
-			
-			} 
-		
-		};
-	
-	}
-	
-	// Clicks events
-	w.onclick = function() { 
-	
-		if (mobile.phone) { window.open('{{ path("lily_app_index", { licence: licence }) }}'); }
-		else { c.style.opacity = 1; c.style.display = 'block'; w.style.opacity = 0; }
-	
-	}
-	
-} __init();	
+(function() {
+  'use strict';
+
+  // Detect if is ie < 10
+  if (/MSIE (\d+\.\d+);/.test(navigator.userAgent)) {
+    var ieversion = new Number(RegExp.$1);
+    if (ieversion < 10) {
+      return false;
+    }
+  }
+
+  /**
+   * isMobile.js v0.3.5
+   *
+   * A simple library to detect Apple phones and tablets,
+   * Android phones and tablets, other mobile devices (like blackberry, mini-opera and windows phone),
+   * and any kind of seven inch device, via user agent sniffing.
+   *
+   * @author: Kai Mallea (kmallea@gmail.com)
+   *
+   * @license: http://creativecommons.org/publicdomain/zero/1.0/
+   */
+  (function(global) {
+
+    var apple_phone = /iPhone/i,
+      apple_ipod = /iPod/i,
+      apple_tablet = /iPad/i,
+      android_phone = /(?=.*\bAndroid\b)(?=.*\bMobile\b)/i, // Match 'Android' AND 'Mobile'
+      android_tablet = /Android/i,
+      windows_phone = /IEMobile/i,
+      windows_tablet = /(?=.*\bWindows\b)(?=.*\bARM\b)/i, // Match 'Windows' AND 'ARM'
+      other_blackberry = /BlackBerry/i,
+      other_blackberry_10 = /BB10/i,
+      other_opera = /Opera Mini/i,
+      other_firefox = /(?=.*\bFirefox\b)(?=.*\bMobile\b)/i, // Match 'Firefox' AND 'Mobile'
+      seven_inch = new RegExp(
+        '(?:' + // Non-capturing group
+        'Nexus 7' + // Nexus 7
+        '|' + // OR
+        'BNTV250' + // B&N Nook Tablet 7 inch
+        '|' + // OR
+        'Kindle Fire' + // Kindle Fire
+        '|' + // OR
+        'Silk' + // Kindle Fire, Silk Accelerated
+        '|' + // OR
+        'GT-P1000' + // Galaxy Tab 7 inch
+        ')', // End non-capturing group
+        'i'); // Case-insensitive matching
+
+    var match = function(regex, userAgent) {
+      return regex.test(userAgent);
+    };
+
+    var IsMobileClass = function(userAgent) {
+      var ua = userAgent || navigator.userAgent;
+
+      this.apple = {
+        phone: match(apple_phone, ua),
+        ipod: match(apple_ipod, ua),
+        tablet: match(apple_tablet, ua),
+        device: match(apple_phone, ua) || match(apple_ipod, ua) || match(apple_tablet, ua)
+      };
+      this.android = {
+        phone: match(android_phone, ua),
+        tablet: !match(android_phone, ua) && match(android_tablet, ua),
+        device: match(android_phone, ua) || match(android_tablet, ua)
+      };
+      this.windows = {
+        phone: match(windows_phone, ua),
+        tablet: match(windows_tablet, ua),
+        device: match(windows_phone, ua) || match(windows_tablet, ua)
+      };
+      this.other = {
+        blackberry: match(other_blackberry, ua),
+        blackberry10: match(other_blackberry_10, ua),
+        opera: match(other_opera, ua),
+        firefox: match(other_firefox, ua),
+        device: match(other_blackberry, ua) || match(other_blackberry_10, ua) || match(
+          other_opera, ua) || match(other_firefox, ua)
+      };
+      this.seven_inch = match(seven_inch, ua);
+      this.any = this.apple.device || this.android.device || this.windows.device || this.other
+        .device ||
+        this.seven_inch;
+      // excludes 'other' devices and ipods, targeting touchscreen phones
+      this.phone = this.apple.phone || this.android.phone || this.windows.phone;
+      // excludes 7 inch devices, classifying as phone or tablet is left to the user
+      this.tablet = this.apple.tablet || this.android.tablet || this.windows.tablet;
+
+      if (typeof window === 'undefined') {
+        return this;
+      }
+    };
+
+    var instantiate = function() {
+      var IM = new IsMobileClass();
+      IM.Class = IsMobileClass;
+      return IM;
+    };
+
+    if (typeof module != 'undefined' && module.exports && typeof window === 'undefined') {
+      //node
+      module.exports = IsMobileClass;
+    } else if (typeof module != 'undefined' && module.exports && typeof window !== 'undefined') {
+      //browserify
+      module.exports = instantiate();
+    } else if (typeof define === 'function' && define.amd) {
+      //AMD
+      define(global.isMobile = instantiate());
+    } else {
+      global.isMobile = instantiate();
+    }
+
+  })(this);
+
+  /*\
+|*|
+|*|  :: cookies.js ::
+|*|
+|*|  A complete cookies reader/writer framework with full unicode support.
+|*|
+|*|  Revision #1 - September 4, 2014
+|*|
+|*|  https://developer.mozilla.org/en-US/docs/Web/API/document.cookie
+|*|  https://developer.mozilla.org/User:fusionchess
+|*|
+|*|  This framework is released under the GNU Public License, version 3 or later.
+|*|  http://www.gnu.org/licenses/gpl-3.0-standalone.html
+|*|
+|*|  Syntaxes:
+|*|
+|*|  * docCookies.setItem(name, value[, end[, path[, domain[, secure]]]])
+|*|  * docCookies.getItem(name)
+|*|  * docCookies.removeItem(name[, path[, domain]])
+|*|  * docCookies.hasItem(name)
+|*|  * docCookies.keys()
+|*|
+\*/
+
+  var docCookies = {
+    getItem: function(sKey) {
+      if (!sKey) {
+        return null;
+      }
+      return decodeURIComponent(document.cookie.replace(new RegExp("(?:(?:^|.*;)\\s*" +
+        encodeURIComponent(sKey).replace(/[\-\.\+\*]/g, "\\$&") +
+        "\\s*\\=\\s*([^;]*).*$)|^.*$"), "$1")) || null;
+    },
+    setItem: function(sKey, sValue, vEnd, sPath, sDomain, bSecure) {
+      if (!sKey || /^(?:expires|max\-age|path|domain|secure)$/i.test(sKey)) {
+        return false;
+      }
+      var sExpires = "";
+      if (vEnd) {
+        switch (vEnd.constructor) {
+          case Number:
+            sExpires = vEnd === Infinity ? "; expires=Fri, 31 Dec 9999 23:59:59 GMT" :
+              "; max-age=" + vEnd;
+            break;
+          case String:
+            sExpires = "; expires=" + vEnd;
+            break;
+          case Date:
+            sExpires = "; expires=" + vEnd.toUTCString();
+            break;
+        }
+      }
+      document.cookie = encodeURIComponent(sKey) + "=" + encodeURIComponent(sValue) + sExpires +
+        (sDomain ? "; domain=" + sDomain : "") + (sPath ? "; path=" + sPath : "") + (bSecure ?
+        "; secure" : "");
+      return true;
+    },
+    removeItem: function(sKey, sPath, sDomain) {
+      if (!this.hasItem(sKey)) {
+        return false;
+      }
+      document.cookie = encodeURIComponent(sKey) + "=; expires=Thu, 01 Jan 1970 00:00:00 GMT" +
+        (sDomain ? "; domain=" + sDomain : "") + (sPath ? "; path=" + sPath : "");
+      return true;
+    },
+    hasItem: function(sKey) {
+      if (!sKey) {
+        return false;
+      }
+      return (new RegExp("(?:^|;\\s*)" + encodeURIComponent(sKey).replace(/[\-\.\+\*]/g, "\\$&") +
+        "\\s*\\=")).test(document.cookie);
+    },
+    keys: function() {
+      var aKeys = document.cookie.replace(
+        /((?:^|\s*;)[^\=]+)(?=;|$)|^\s*|\s*(?:\=[^;]*)?(?:\1|$)/g, "").split(
+        /\s*(?:\=[^;]*)?;\s*/);
+      for (var nLen = aKeys.length, nIdx = 0; nIdx < nLen; nIdx++) {
+        aKeys[nIdx] = decodeURIComponent(aKeys[nIdx]);
+      }
+      return aKeys;
+    }
+  };
+
+  /**
+   *
+   * Main app and widget insert and config
+   * Listens and triggers events from and for the app iframe
+   *
+   */
+  var app = new App();
+
+  function App() {
+
+    var hostHead = document.getElementsByTagName('head'),
+      hostBody = document.getElementsByTagName('body');
+
+    // Create stylesheet
+    var $script = document.createElement('link'),
+      $widget = document.createElement('div'),
+      $iframe = document.createElement('iframe'),
+      $container = document.createElement('div');
+
+    $script.setAttribute('rel', 'stylesheet');
+    $script.setAttribute('type', 'text/css');
+    $script.setAttribute('href',
+      'http://cdn.saio.fr/customer/{{ licence }}/scss/lily-float.css');
+    // Append to Host head
+    hostHead[0].appendChild($script);
+
+    // Create widget container
+    $widget.setAttribute('id', 'lily-widget-container');
+    $widget.innerHTML = '<h3>Vous avez une question ?</h3>';
+    // Append to host page
+    hostBody[0].appendChild($widget);
+
+    // Create app container
+    $container.setAttribute('id', 'lilyAppContainer');
+    // Append to host page
+    hostBody[0].appendChild($container);
+
+    this.init = function() {
+      // Instanciate Event Class;
+      this.events = new Events();
+      this.lilyIframeSrc = '{{ path("lily_app_index", { licence: licence }) }}';
+      this.iframeHost = this.getIframeHost();
+      // Create iframe if not mobile
+      if (isMobile.phone) {
+        this.showWidget();
+      } else {
+        this.appendIframe();
+        this.iframe = window.open(this.lilyIframeSrc, "saio_lily_app");
+        // Bind UI Events :
+        $widget.onclick = this.onWidgetClick;
+        // The app has loaded all scripts, styles and markup
+        $iframe.onload = this.onIframeLoad;
+      }
+    };
+
+    this.onIframeLoad = function() {
+      this.bindIframeDOMEvents();
+    };
+
+    this.onWidgetClick = function() {
+      if (isMobile.phone) {
+        this.openMobileWindow();
+      } else {
+        this.showIframe();
+        this.hideWidget();
+      }
+      this.events.send("coucou");
+
+    };
+
+    this.onIconReduceClick = function() {
+      this.hideIframe();
+      this.showWidget();
+    };
+
+    this.appendIframe = function() {
+      var self = this;
+      $iframe.setAttribute('id', 'lilyApp');
+      // $iframe.setAttribute('src', self.lilyIframeSrc);
+      $iframe.setAttribute('frameborder', '0');
+      $iframe.setAttribute('name', 'saio_lily_app');
+      document.getElementById('lilyAppContainer').appendChild($iframe);
+    };
+
+    this.bindIframeDOMEvents = function() {
+      var _iframeDocument = $iframe.contentWindow.document,
+        $iconReduce = _iframeDocument
+        .getElementsByClassName('lily-icon-reduce')[0];
+      // Event listeners
+      if (!isMobile.phone) {
+        $iconReduce.onclick = this.onIconReduceClick;
+      }
+    };
+
+    this.showIframe = function() {
+      $container.style.opacity = 1;
+      $container.style.visibility = 'visible';
+    };
+
+    this.showWidget = function() {
+      $widget.style.opacity = 1;
+      $widget.style.visibility = 'visible';
+    };
+
+    this.hideIframe = function() {
+      $container.style.opacity = 0;
+      $container.style.visibility = "hidden";
+    };
+
+    this.hideWidget = function() {
+      // Showing the widget
+      $widget.style.opacity = 0;
+      $widget.style.visibility = "hidden";
+    };
+
+    this.openMobileWindow = function() {
+      window.location = this.lilyIframeSrc;
+    };
+
+    this.getIframeHost = function() {
+      return this.lilyIframeSrc.replace(/([^:]+:\/\/[^\/]+).*/, "$1");
+    };
+
+    return this;
+  }
+
+  /**
+   *
+   * Helpers and methods to communicate with the iframe;
+   *
+   */
+  function Events() {
+
+    this.send = function(msg) {
+      app.iframe.postMessage(msg, app.lilyIframeSrc);
+    };
+
+    function receiveMessage(event) {
+
+      if (event.origin !== app.iframeHost) {
+        return;
+      }
+
+      console.log(event.data);
+      // event.source is popup
+      // event.data is "hi there yourself!  the secret response is: rheeeeet!"
+    }
+    window.addEventListener("message", receiveMessage, false);
+
+    return this;
+  }
+
+  app.init();
+
+})();
