--- a/web/css/backoffice/chat.css
+++ b/web/css/backoffice/chat.css
@@ -15,7 +15,7 @@ LIVE CHAT
 }
 
 .live-nav.active a {
-  background: #626b7b !important;
+  background: #528DC3 !important;
   color: #f2f2f2 !important;
 }
 
