--- a/src/Lily/BackOfficeBundle/Resources/views/header.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/header.html.twig
@@ -10,6 +10,9 @@
   </div>
   <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav navbar-right">
+      
+      {% if app.user.client.config.chat %}
+      <!--
       <li class="chat pull-left hidden-xs">
         <a href="#" class="dropdown-toggle dk">
           <span class="badge up bg-danger m-r-n-sm">2</span>
@@ -18,7 +21,7 @@
       </li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle dk" data-toggle="dropdown">
-          <i class="icon-stop"></i>
+          <i class="icon-stop status"></i>
           Disponible
           <b class="caret"></b>
         </a>
@@ -31,6 +34,9 @@
           </li>
         </ul>
       </li>
+      -->
+      {% endif %}
+      
       <li class="dropdown">
         <a href="#" class="dropdown-toggle dker" data-toggle="dropdown">
           <span class="thumb-sm avatar pull-left m-t-n-xs m-r-xs">
