Routes & UI fix

--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/Activities/Charts/footer.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/Activities/Charts/footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="panel-footer b-b">
+<footer class="panel-footer">
   <div class="row text-center">
     <a data-type="conversations" class="col-xs-3 b-r">
       <p class="h3 font-bold m-t">
