--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/Activities/Charts/graph.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/Activities/Charts/graph.html.twig
@@ -4,7 +4,7 @@
     <span></span><b class="caret"></b>
   </div>
 </header>
-<div class="panel-body bg-white">
+<section class="panel-body bg-white">
   <!-- loader --> 
-  <div class="graph"></div>
-</div>
+  <div class="graph scrollable"></div>
+</section>
