--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/skeleton.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/skeleton.html.twig
@@ -1,4 +1,4 @@
-<section class="hbox stretch">
+<section class="hbox stretch panel">
   <aside class="users-activities-wrapper bg-white">
   <!-- Activities template -->
   </aside>
