--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/Activities/Chats/skeleton.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/Activities/Chats/skeleton.html.twig
@@ -15,7 +15,9 @@
     </ul>
   </div>
 </header>
-<section class="hbox stretch bg-white">
-  <aside><ul class="conversations-list list-group no-radius list-group-alt list-group-lg"></ul></aside>
-  <aside class="conversation-details hide"></aside>
+<section>
+  <section class="hbox stretch bg-white">
+    <aside><ul class="conversations-list list-group no-radius list-group-alt list-group-lg"></ul></aside>
+    <aside class="conversation-details hide"></aside>
+  </section>
 </section>
