--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/skeleton.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/skeleton.html.twig
@@ -11,19 +11,19 @@
   </ul>
 </header>
 <section class="tab-content-wrapper scrollable">
-  <div class="hbox stretch tab-content wrapper-lg bg-light">
-    <div class="tab-pane row wrapper usage-wrapper">
+  <section class="hbox stretch tab-content wrapper-lg bg-light">
+    <section class="tab-pane row usage-wrapper">
     <!-- Usage -->
-    </div>
-    <div class="tab-pane row wrapper avi-wrapper">
+    </section>
+    <section class="tab-pane row avi-wrapper">
     <!-- Avi -->
-    </div>
-    <div class="tab-pane row wrappe chat-wrapper">
+    </section>
+    <section class="tab-pane row chat-wrapper">
     <!-- Chat -->
-    </div>
-    <aside class="tab-pane users-wrapper">
+    </section>
+    <section class="tab-pane users-wrapper">
     <!-- Users -->
-    </aside>
+    </section>
     <div class="text-center wrapper">
       <i class="icon-spinner icon-spin icon-large"></i>
     </div>
