--- a/src/Lily/AppBundle/Resources/views/tracker.js.twig
+++ b/src/Lily/AppBundle/Resources/views/tracker.js.twig
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 (function() {
   'use strict';
 
@@ -112,7 +111,7 @@
       global.isMobile = instantiate();
     }
 
-  })(window);
+  })(this);
 
   /*\
 |*|
@@ -210,35 +209,34 @@
     var hostHead = document.getElementsByTagName('head'),
       hostBody = document.getElementsByTagName('body');
 
-
     // Create stylesheet
     var $script = document.createElement('link'),
       $widget = document.createElement('div'),
       $iframe = document.createElement('iframe'),
       $container = document.createElement('div');
 
-
     $script.setAttribute('rel', 'stylesheet');
     $script.setAttribute('type', 'text/css');
-    $script.setAttribute('href', '{{ licence|customerDir|raw }}/css/lily-float.css');
-    $widget.setAttribute('id', 'lily-widget-container');
-    $widget.innerHTML = '{{ widget }}';
-    $container.setAttribute('id', 'lilyAppContainer');
-
-    // Append to host page
+    $script.setAttribute('href',
+      'http://cdn.saio.fr/customer/{{ licence }}/scss/lily-float.css');
+    // Append to Host head
     hostHead[0].appendChild($script);
+
+    // Create widget container
+    $widget.setAttribute('id', 'lily-widget-container');
+    $widget.innerHTML = '<h3>Vous avez une question ?</h3>';
+    // Append to host page
     hostBody[0].appendChild($widget);
+
+    // Create app container
+    $container.setAttribute('id', 'lilyAppContainer');
+    // Append to host page
     hostBody[0].appendChild($container);
 
-    /**
-     * Initiation method:
-     * Appends iframe to host page and binds event listeners
-     */
     this.init = function() {
       // Instanciate Event Class;
-      var self = this;
       this.events = new Events();
-      this.lilyIframeSrc = '{{ url("lily_app_index", { licence: licence }) }}';
+      this.lilyIframeSrc = '{{ path("lily_app_index", { licence: licence }) }}';
       this.iframeHost = this.getIframeHost();
       // Create iframe if not mobile
       if (isMobile.phone) {
@@ -247,18 +245,13 @@
         this.appendIframe();
         this.iframe = window.open(this.lilyIframeSrc, "saio_lily_app");
         // Bind UI Events :
-        $widget.addEventListener("click",function() {
-          self.onWidgetClick.apply(self, arguments);
-        },false);
+        $widget.onclick = this.onWidgetClick;
         // The app has loaded all scripts, styles and markup
-        $iframe.addEventListener("load",function() {
-          self.onIframeLoad.apply(self, arguments);
-        },false);
+        $iframe.onload = this.onIframeLoad;
       }
     };
 
     this.onIframeLoad = function() {
-      this.showWidget();
       this.bindIframeDOMEvents();
     };
 
@@ -279,6 +272,7 @@
     };
 
     this.appendIframe = function() {
+      var self = this;
       $iframe.setAttribute('id', 'lilyApp');
       // $iframe.setAttribute('src', self.lilyIframeSrc);
       $iframe.setAttribute('frameborder', '0');
@@ -288,13 +282,11 @@
 
     this.bindIframeDOMEvents = function() {
       var _iframeDocument = $iframe.contentWindow.document,
-        $iconReduce = _iframeDocument.getElementsByClassName('lily-icon-reduce')[0],
-        self= this;
+        $iconReduce = _iframeDocument
+        .getElementsByClassName('lily-icon-reduce')[0];
       // Event listeners
       if (!isMobile.phone) {
-        $iconReduce.addEventListener("click",function() {
-          self.onIconReduceClick.apply(self, arguments);
-        },false);
+        $iconReduce.onclick = this.onIconReduceClick;
       }
     };
 
@@ -359,70 +351,3 @@
   app.init();
 
 })();
-=======
-function __init() {
-	
-	// Detect if is ie < 10
-	if (/MSIE (\d+\.\d+);/.test(navigator.userAgent)) { 
-		var ieversion=new Number(RegExp.$1)
-		if (ieversion<10) { return false };
-	}
-	
-	// Detect if is Mobile
-	!function(a){var b=/iPhone/i,c=/iPod/i,d=/iPad/i,e=/(?=.*\bAndroid\b)(?=.*\bMobile\b)/i,f=/Android/i,g=/IEMobile/i,h=/(?=.*\bWindows\b)(?=.*\bARM\b)/i,i=/BlackBerry/i,j=/Opera Mini/i,k=/(?=.*\bFirefox\b)(?=.*\bMobile\b)/i,l=new RegExp("(?:Nexus 7|BNTV250|Kindle Fire|Silk|GT-P1000)","i"),m=function(a,b){return a.test(b)},n=function(a){var n=a||navigator.userAgent;this.apple={phone:m(b,n),ipod:m(c,n),tablet:m(d,n),device:m(b,n)||m(c,n)||m(d,n)},this.android={phone:m(e,n),tablet:!m(e,n)&&m(f,n),device:m(e,n)||m(f,n)},this.windows={phone:m(g,n),tablet:m(h,n),device:m(g,n)||m(h,n)},this.other={blackberry:m(i,n),opera:m(j,n),firefox:m(k,n),device:m(i,n)||m(j,n)||m(k,n)},this.seven_inch=m(l,n),this.any=this.apple.device||this.android.device||this.windows.device||this.other.device||this.seven_inch,this.phone=this.apple.phone||this.android.phone||this.windows.phone,this.tablet=this.apple.tablet||this.android.tablet||this.windows.tablet},o=new n;o.Class=n,"undefined"!=typeof module&&module.exports?module.exports=o:"function"==typeof define&&define.amd&&define(o),a.mobile=o}(this);
-	
-	var head = document.getElementsByTagName('head');
-	var body = document.getElementsByTagName('body');
-	
-	// Add stylesheet
-	var s = document.createElement('link');
-	s.setAttribute('rel', 'stylesheet');
-	s.setAttribute('type', 'text/css');
-	s.setAttribute('href', '{{ licence|customerDir|raw }}/css/lily-float.css');
-	head[0].appendChild(s);
-	
-	// Add widget container	
-	var w = document.createElement('div');
-	w.setAttribute('id', 'lily-widget-container');
-	w.innerHTML = '<h3>Vous avez une question ?</h3>';
-	body[0].appendChild(w);
-	if (mobile.phone) { w.style.opacity = 1; }
-	
-	// Add app container	
-	var c = document.createElement('div');
-	c.setAttribute('id', 'lilyAppContainer');	
-	body[0].appendChild(c);
-	
-	// Add iframe if not mobile
-	if (!mobile.phone) {
-	
-		var i = document.createElement('iframe');
-		i.setAttribute('id', 'lilyApp');
-		i.setAttribute('src', '{{ path("lily_app_index", { licence: licence }) }}');
-		i.setAttribute('frameborder', '0');
-		document.getElementById('lilyAppContainer').appendChild(i);
-		
-		i.onload = function() { 
-			
-			// Showing the widget
-			w.style.opacity = 1;
-			w.style.display = 'block';
-			
-			// Event listener 
-			if (!mobile.phone) {
-				
-				i.contentWindow.document.getElementsByClassName('lily-icon-reduce')[0].onclick = function() { c.style.opacity = 0; c.style.display = 'none'; w.style.opacity = 1;
-  		  }
-			} 
-		};
-	}
-	
-	// Clicks events
-	w.onclick = function() { 
-	
-		if (mobile.phone) { window.open('{{ path("lily_app_index", { licence: licence }) }}'); }
-		else { c.style.opacity = 1; c.style.display = 'block'; w.style.opacity = 0; }
-	}
-	
-} __init();	
->>>>>>> 1a4e79641df04bf2ebda4ee9da2f283c4eeb34a8
