--- a/web/css/compiled/faq.css
+++ b/web/css/compiled/faq.css
@@ -9,26 +9,49 @@ body {
 }
 .new-content {
   margin: 0 0 0 7px!important;
-  border: 1px solid #579ad7;
-  color: #579ad7 !important;
+  color: white !important;
+  background: #c3cdd8;
+}
+.new-content:hover {
+  margin: 0 0 0 7px!important;
+  color: white !important;
+  background: #b8c4ce;
 }
 .new-categorie {
   margin: 0 !important;
 }
-.faq-content {
-  border: 1px solid rgba(87, 154, 215, 0.6);
-  color: #579ad7 !important;
+.faq-grabber {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 40px;
+  height: 47px;
+  border-right: 1px solid #ebeff6;
+  display: inline-block;
+  cursor: move;
+}
+.faq-content .faq-grabber {
+  border-color: white;
+}
+.faq-grabber i {
+  position: absolute;
+  top: 15px;
+  left: 8px;
+  font-size: 18px;
 }
 .faq-category {
-  border: 1px solid #dddddd;
+  box-shadow: 5px 4px 5px -5px #9097A8
+}
+.faq-content {
+  color: #fff;
+  background: rgba(195, 206, 216, 1);
 }
 .faq-content.active {
   color: #fff;
   background: #579ad7;
 }
-.list-group-item{
-  position: relative;
-  height: 40px;
+.list-group-item {
+  margin-top: 5px;
   cursor: pointer;
 }
 .list-group-item.editing .faq-name {
@@ -36,9 +59,15 @@ body {
 }
 .list-group-item.editing .edit {
   display: inline-block;
-  width: auto;
-  max-width: 90%;
-  height: 18px;
+  width: 90%;
+  height: 17px;
+}
+.faq-item {
+  margin-left: 30px;
+  height: 17px;
+}
+.faq-category .icon-reorder {
+  color: #6E6E6E;
 }
 .faq-item .icon-reorder {
   font-size: 17px;
@@ -46,17 +75,13 @@ body {
   margin-left: -5px;
   cursor: move;
 }
-.faq-content.active .icon-reorder {
-  color: #fff;
-}
-.faq-category.active .icon-reorder {
-  color: #717171;
-}
 .faq-item .faq-name {
   cursor: text;
   pointer-events: auto;
   display: inline-block;
   padding-left: 8px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .list-group-item.faq-category .faq-name { color: #717171; }
 .list-group-item.faq-content.editing .faq-name,
@@ -64,19 +89,21 @@ body {
   color: #fff;
 }
 .list-group-item .destroy {
-  font-size: 20px;
+  margin-top: -5px;
+  margin-right: 30px;
+  font-size: 25px;
   vertical-align: middle;
   z-index: 1;
   cursor: pointer;
 }
 .list-group-item .edit {
   display: none;
-  position: relative;
-  border-width: 0;
+  border: none;
   background: transparent;
   box-shadow: none;
+  margin-top: -2px;
   padding: 0 30px 0 8px;
-  font-size: 13px;
+  font-size: 12px;
   color: #717171;
 }
 .list-group-item.faq-content .edit {
@@ -89,7 +116,7 @@ body {
   height: 300px;
   font-size: 12px;
 }
-.breadcrumbs {
+.breadcrumb {
   margin: 0;
   color: #717171;
   padding: 6px;
@@ -124,7 +151,13 @@ body {
 .modal-backdrop.in {
   opacity: 0.94;
 }
-
+.faq-category .icon-angle-right {
+  position: absolute;
+  right: 10px;
+  top: 5px;
+  font-size: 35px;
+  opacity: 0.7;
+}
 ul.wysihtml5-toolbar {
 	margin: 0;
 	padding: 0;
