--- a/web/css/compiled/redirections.css
+++ b/web/css/compiled/redirections.css
@@ -1,7 +1,9 @@
 /*=======================================================================================================
 REDIRECTION
 =======================================================================================================*/
-
+h5 {
+  font-weight: 600;
+}
 .icon-plus {
   line-height: 1.55;
 }
@@ -11,9 +13,6 @@ REDIRECTION
 }
 .list-group-item.redirection-view.active {
   border-right: 4px solid #63a5e1 !important;
-}
-.list-group-alt .list-group-item:nth-child(2n+2) {
-  background-color: rgba(219, 219, 219, 0.72);
 }
 .redirection-action {
   font-size: 13px;
@@ -43,6 +42,9 @@ REDIRECTION
 }
 .modal-backdrop.in {
   opacity: 0.94;
+}
+.js-redirection-new {
+  margin: 20px;
 }
 
 @media (max-width: 767px) {
