inactivity check and reconnect feature in app

--- a/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
@@ -113,6 +113,15 @@
 	    <script type="text/template" id="chat-message-operator">
 	        {% include 'LilyAppBundle:themes:lily/templates/message_chat_operator.html.twig' %}
 	    </script>
+	    <script type="text/template" id="chat-message-reconnect">
+	        {% include 'LilyAppBundle:themes:lily/templates/message_chat_reconnect.html.twig' %}
+	    </script>
+	    	    <script type="text/template" id="chat-message-transfer">
+	        {% include 'LilyAppBundle:themes:lily/templates/message_chat_transfer.html.twig' %}
+	    </script>
+    	    <script type="text/template" id="chat-message-ban">
+        {% include 'LilyAppBundle:themes:lily/templates/message_chat_ban.html.twig' %}
+	    </script>
 	{% endblock %}
 
 	{% block bootstrap %}
