--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/content.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/content.html.twig
@@ -14,7 +14,7 @@
 		</div>
 
 		<ul>
-			<div class="lily-wrapper-faq-content">
+			<div class="lily-wrapper-faq-content lily-cst-wrapper-faq-content">
 				<p><%= content %></p>
 			</div>
 		</ul>
